# arduino-pico

./: .gitignore  .gitmodules  .readthedocs.yaml  README.md  boards.txt  keywords.txt  package.json  platform.json  platform.txt  programmers.txt
.github/: pull-request.yml
.github/workflows/: build-libpico.yml  codeql-analysis.yml  pull-request.yml  release-to-publish.yml  tag-to-draft-release.yml
assembly/: boot2_is25lp080_2_padded_checksum.S  boot2_w25x10cl_2_padded_checksum.S  boot2_w25x10cl_4_padded_checksum.S  bs2_default_padded_checksummed.S
boot2/: boot2_is25lp080_2_padded_checksum.S  boot2_is25lp080_4_padded_checksum.S  boot2_w25q080_4_padded_checksum.S  boot2_w25q64jv_4_padded_checksum.S
boot2/rp2040/: boot2_W25Q32JVxQ_4_padded_checksum.S  boot2_generic_03h_2_padded_checksum.S  boot2_generic_03h_4_padded_checksum.S  boot2_is25lp080_4_padded_checksum.S  boot2_w25q080_2_padded_checksum.S  boot2_w25q128jvxq_4_padded_checksum.S  boot2_w25q16jvxq_4_padded_checksum.S
boot2/rp2350/: boot2_generic_03h_2_padded_checksum.S  boot2_generic_03h_4_padded_checksum.S  boot2_w25q080_2_padded_checksum.S  boot2_w25q080_4_padded_checksum.S  none.S
boot2/rp2350-riscv/: boot2_generic_03h_2_padded_checksum.S  boot2_generic_03h_4_padded_checksum.S  boot2_w25q080_2_padded_checksum.S  boot2_w25q080_4_padded_checksum.S
cores/rp2040/: Arduino.h  AudioOutputBase.h  AudioRingBuffer.cpp  AudioRingBuffer.h  BluetoothDebug.cpp  BluetoothLock.h  Bootsel.cpp  Bootsel.h  Client.h  CoreMutex.cpp  CoreMutex.h  FS.cpp  FS.h  FSImpl.h  HardwareSerial.h  I2S.cpp  IPAddress.h  Interrupts.h  LWIPMutex.cpp  LWIPMutex.h  LocklessQueue.h  PIOProgram.cpp  PIOProgram.h  PIOUart.cpp  PolledTimeout.h  Print.h  Printable.h  RP2040.h  RP2040Support.cpp  RP2040Support.h  RP2040USB.cpp  RP2040USB.h  RP2040Version.h  RP2350Support.cpp  RP2350Support.h  SemiFS.h  Semihosting.cpp  Semihosting.h  SerialPIO.cpp  SerialPIO.h  (+64 more)
docs/: Makefile  a2dp.rst  adc.rst  analog.rst  bearssl-client-secure-class.rst  bearssl-server-secure-class.rst  bearssl.rst  ble.rst  bluetooth.rst  bootsel.rst  conf.py  contrib.rst  digital.rst  eeprom.rst  ethernet.rst  fatfsusb.rst  freertos.rst  fs.rst  help.rst  hidmaster.rst  httpclient.rst  i2s.rst  ide.rst  ilabs_espnow.rst  index.md  index.rst  install.rst  libraries.rst  license.rst  make.bat  multicore.rst  ota.rst  pins.rst  piouart.rst  platformio.rst  profiling.rst  psram.rst  pwm.rst  rp2040.rst  rp2350.rst  (+14 more)
include/: arduino_pico_tusb_config.h  btstack_config.h  lwipopts.h  tusb_config.h
include/bearssl/: bearssl_git.h
lib/: core_inc.txt  core_wrap.txt  memmap_copy_to_ram.ld  memmap_default.ld  memmap_picodebug.ld  picoprobe_cmsis_dap.tcl  platform_def.txt  platform_inc.txt  platform_wrap.txt
lib/rp2040/: memmap_default.ld  picodebug.tcl  platform_def.txt  platform_inc.txt  platform_wrap.txt
lib/rp2350/: memmap_default.ld  platform_def.txt  platform_inc.txt  platform_wrap.txt
lib/rp2350-riscv/: memmap_default.ld  ota.c  picoprobe_cmsis_dap.tcl  platform_def.txt  platform_inc.txt  platform_wrap.txt
libraries/ADCInput/: keywords.txt  library.properties
libraries/ArduinoOTA/: library.properties
libraries/AudioBufferManager/: library.properties
libraries/BLE/: README.md  keywords.txt  library.properties
libraries/BTstack/: library.properties
libraries/BTstackLib/: README.rp2040  keywords.txt
libraries/BluetoothAudio/: keywords.txt  library.properties
libraries/BluetoothHCI/: keywords.txt  library.properties
libraries/BluetoothHIDMaster/: keywords.txt  library.properties
libraries/DNSServer/: library.properties
libraries/EEPROM/: EEPROM.cpp  EEPROM.h  library.properties
libraries/FatFS/: keywords.txt  library.properties
libraries/FatFSUSB/: keywords.txt  library.properties
libraries/FatFs/: library.properties
libraries/FreeRTOS/: CODE_OF_CONDUCT.md  LICENSE  keywords.txt  library.properties  readme.md
libraries/HID_Bluetooth/: keywords.txt  library.properties
libraries/HTTPClient/: keywords.txt  library.properties
libraries/HTTPUpdate/: keywords.txt  library.properties
libraries/HTTPUpdateServer/: keywords.txt  library.properties
libraries/Hash/: library.properties
libraries/I2S/: keywords.txt  library.properties
libraries/Joystick/: README.adoc  keywords.txt  library.properties
libraries/JoystickBLE/: keywords.txt  library.properties
libraries/JoystickBT/: README.adoc  keywords.txt  library.properties
libraries/Keyboard/: README.adoc  library.properties
libraries/KeyboardBLE/: keywords.txt  library.properties
libraries/KeyboardBT/: keywords.txt  library.properties
libraries/LEAmDNS/: keywords.txt  library.properties
libraries/LittleFS/: keywords.txt  library.properties
libraries/LowPower/: LowPower.cpp  LowPower.h  library.properties
libraries/MD5Builder/: keywords.txt  library.properties
libraries/Mouse/: keywords.txt  library.properties
libraries/MouseAbsolute/: keywords.txt  library.properties
libraries/MouseBLE/: README.adoc  (+2 more)
ota/: CMakeLists.txt  README.md  make-ota.sh  memmap_ota.ld  memmap_ota_rp2350-riscv.ld  memmap_ota_rp2350.ld  ota.c  ota.h  ota_clocks.c  ota_command.h  ota_lfs.c  ota_lfs.h
package/: README.md  build_boards_manager_package.sh  package_pico_index.template.json  update_release.py  upload_release.py
pico-sdk-lib/: CMakeLists.txt  boot.sh  build.sh
system/: get.py  uf2conv.py
tests/: build-rp2350-riscv.sh  build-rp2350.sh  build-tinyusb.sh  build.sh  common.sh  debug.sh  restyle.sh  run_CI_locally.sh
tests 2/: build-rp2350.sh  build-tinyusb.sh  build.sh
tools/: README.md  build.py  discovery.py  espota.py  format_tzdata.py  get.py  makeboards.py  makepacer.cpp  makepio.py  makever.py  platformio-build.py  pluggable_discovery.py  signing.py  simplesub.py  tzupdate.sh  uf2conv.py
tools/libpico/: CMakeLists.txt  btstack_config.h  lwipopts.h  make-libpico.sh  pico_extras_import.cmake  sdk.patch  tusb_config.h
waveshare_rp2040_lora/: pins_arduino.h
web-discovery/: README.md  eslint.config.js  index.html  package-lock.json  package.json  server.js  vite.config.js
(+1552 files in other folders)
